Fixed content jumping

--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -128,6 +128,7 @@ input {
 #results {
     display: flex;
     flex-direction: row;
+    flex-grow: 1;
     flex-wrap: wrap;
     justify-content: center;
     font-family: 'Oxygen', sans-serif;
